firebasetst.css
/* Global */

body {
  margin-top: 10px;
  margin-left: auto;
  margin-right: auto;
  width: 90%;
  background-color: #f8f8f8;
  font-size: 24px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #424547;
  text-align: center;
}

h1 {
  font-size: 36px;
  font-weight: bold;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #424547;
}

h3 {
  font-size: 24px;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  color: #424547;
}

p {
 font-size: 16px;
}

input {
  font-size: 24px;
}

input[type=text] {
  color: #424547;
  border: 1px solid #c2c2c2;
  background-color: white;
}

em {
  font-style: normal;
  font-weight: bold;
  color: black;
}

#chat {
  display: -webkit-box;
}

#chatmessages {
  float: left;
  width:70%;
  min-width: 400px;
}

#chatcontainer {
  /*height: 600px;*/
}

/* Chat */
#messagesDiv {
  min-width: 450px;
  background-color: white;
  overflow: auto;
  height: 600px;
  padding: 10px;
  border: 8px solid #424547;
  margin-bottom: 5px;
  text-align: left;
}

#nameInput {
  width: 26%;
  display: none;
}

#messageInput {
  width: 100%;
}

/* Drawing */

#colorholder {
  width: 480px;
  height: 30px;
  border: 2px solid #424547;
  margin-top: 5px;
  margin-left: auto;
  margin-right: auto;
}

#drawing-canvas {
  margin-top: 20px;
  border: 3px solid #999
}

.colorbox {
  width: 22px;
  height: 22px;
  margin: 1px;
  display: inline-block;
  border: 3px solid black;
}

/* Leaderboard */

#leaderboardTable {
  background-color: white;
  overflow: auto;
  width: 100%;
  padding: 10px;
  border: 8px solid #424547;
  margin-bottom: 5px;
}

#scoreInput {
  width: 68%;
}

#highestscore {
  margin-top: 20px;
  font-size: 14px;
}

/* Presence */

#presenceDiv {
  float: right;
  width: 200px;
/*  min-width: 300px;*/
  overflow: auto;
  text-align: center;
  padding: 10px;
}

.userstatus {
  font-size: 10px;
}

/* Tetris */

.tetris-body {
    width: 600px;
}

#canvas0, #canvas1 {
  display: inline-block;
  border: 4px solid #424547;
}

#restartButton {
    margin-top: 5px;
}

#gameInProgress {
  font-size: 14px;
}

.hide {
  display: none;
}

